<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.TaskFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edit_task_name"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/edit_task_description"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/description"
            android:autofillHints="description" />

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/edit_task_date"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="datetime"
            android:hint="@string/date"
            android:autofillHints="date"
            app:mask="__/__/____"
            app:maskCharacter="_"
            app:maskStyle="completable" />

        <RadioGroup
            android:id="@+id/rg_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:gravity="center">
            <RadioButton
                android:id="@+id/rb_to_do"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/to_do"
                android:paddingHorizontal="10dp"
                android:textAllCaps="true"
                android:drawableEnd="@drawable/ic_playlist_add"
                android:checked="true" />
            <RadioButton
                android:id="@+id/rb_in_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/doing"
                android:paddingHorizontal="10dp"
                android:textAllCaps="true"
                android:drawableEnd="@drawable/ic_double_arrow_up" />
            <RadioButton
                android:id="@+id/rb_done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/done"
                android:paddingHorizontal="10dp"
                android:textAllCaps="true"
                android:drawableEnd="@drawable/ic_done" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_save_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:width="200dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:text="@string/save"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>